fix tag spacing and hover functionality

--- a/theme.css
+++ b/theme.css
@@ -839,7 +839,15 @@ input.prompt-input:focus-visible {
 
 
 /* Tags */
-.cm-line:has(.cm-hashtag:hover) .cm-hashtag {
+.cm-hashtag {
+	display: inline-block;
+	margin: 2px 0;
+}
+
+.cm-hashtag-begin:hover,
+.cm-hashtag-begin:hover + .cm-hashtag-end,
+.cm-hashtag-end:hover,
+.cm-hashtag-begin:has(+ .cm-hashtag-end:hover) {
 	background-color: var(--magenta);
 }
 
